--- a/src/main/resources/net/erenalyoruk/hms/fxml/doctor/appointment_list.fxml
+++ b/src/main/resources/net/erenalyoruk/hms/fxml/doctor/appointment_list.fxml
@@ -5,31 +5,34 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.erenalyoruk.hms.controller.doctor.AppointmentListController">
-   <children>
-	   <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="800.0" spacing="20.0">
-		   <padding>
-			   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-		   </padding>
-		   <fx:include maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="../navigation.fxml" />
-		   <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" HBox.hgrow="ALWAYS">
-			   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Appointments">
-				   <font>
-					   <Font name="System Bold" size="24.0" />
-				   </font>
-			   </Text>
-			   <TableView fx:id="appointmentView" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
-				   <columns>
-					   <TableColumn fx:id="dateColumn" editable="false" minWidth="-1.0" prefWidth="-1.0" text="Date" />
-					   <TableColumn fx:id="patientColumn" editable="false" minWidth="-1.0" prefWidth="-1.0" text="Patient" />
-                  <TableColumn fx:id="prescriptionColumn" minWidth="-1.0" prefWidth="-1.0" text="Prescription" />
-					   <TableColumn fx:id="statusColumn" minWidth="-1.0" prefWidth="-1.0" text="Status" />
-				   </columns>
-				   <columnResizePolicy>
-					   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-				   </columnResizePolicy>
-			   </TableView>
-		   </VBox>
-	   </HBox>
-   </children>
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+			xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1"
+			fx:controller="net.erenalyoruk.hms.controller.doctor.AppointmentListController">
+	<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="800.0"
+		  spacing="20.0">
+		<padding>
+			<Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+		</padding>
+		<fx:include maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="../navigation.fxml"/>
+		<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" HBox.hgrow="ALWAYS">
+			<Text strokeType="OUTSIDE" strokeWidth="0.0" text="Appointments">
+				<font>
+					<Font name="System Bold" size="24.0"/>
+				</font>
+			</Text>
+			<TableView fx:id="appointmentView" editable="true" maxHeight="1.7976931348623157E308"
+					   maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+				<columns>
+					<TableColumn fx:id="dateColumn" editable="false" minWidth="-1.0" prefWidth="-1.0" text="Date"/>
+					<TableColumn fx:id="patientColumn" editable="false" minWidth="-1.0" prefWidth="-1.0"
+								 text="Patient"/>
+					<TableColumn fx:id="prescriptionColumn" minWidth="-1.0" prefWidth="-1.0" text="Prescription"/>
+					<TableColumn fx:id="statusColumn" minWidth="-1.0" prefWidth="-1.0" text="Status"/>
+				</columns>
+				<columnResizePolicy>
+					<TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+				</columnResizePolicy>
+			</TableView>
+		</VBox>
+	</HBox>
 </AnchorPane>
